fix text wrapping on learn menu

--- a/assets/css/bundle.css
+++ b/assets/css/bundle.css
@@ -3712,7 +3712,7 @@ ul.glossary{
 
   .header-container .desktop-menu li:not(.header-dropdown-item).header-nav-item-drop-down .learn{
     right: -12rem;
-    min-width:67ch
+    min-width:69ch
   }
 
   .header-container .desktop-menu li:not(.header-dropdown-item).header-nav-item-drop-down .dropdown-menu-caret{
